# jing-project

./: .gitignore  LICENSE  README.md  pom.xml
c/: .clang-format  CMakeLists.txt  clang-format.ps1  clang-format.sh
c/src/: jing.c  jing.h  jing_common.h  jing_epoll.c  jing_epoll.h  jing_kqueue.c  jing_kqueue.h  jing_net.c  jing_net.h  jing_posix_net.c  jing_posix_net.h  jing_sys.c  jing_sys.h  jing_wepoll.c  jing_wepoll.h  jing_win_net.c  jing_win_net.h
doc/: APT.md  Configuration.md  FFI.md  NET.md  Overview.md  Style.md
jing-annprocessor/: pom.xml
jing-annprocessor/src/main/java/: module-info.java
jing-annprocessor/src/main/java/io/jingproject/annprocess/: AnnotationProcessorException.java  GeneratorBlock.java  GeneratorLine.java  GeneratorSource.java  Provider.java  ProviderProcessor.java
jing-bindings/: pom.xml
jing-bindings/src/main/java/: module-info.java
jing-bindings/src/main/java/io/jingproject/bindings/: EpollBindings.java  KqueueBindings.java  NetBindings.java  SysBindings.java  SysPosixBindings.java  SysWinBindings.java  VmBindings.java  WepollBindings.java
jing-common/: pom.xml
jing-common/src/main/java/: module-info.java
jing-common/src/main/java/io/jingproject/common/: Anchor.java  ArrayAccess.java  BatchQueue.java  Channel.java  ConfigurationFacade.java  ConfigurationFactory.java  Dec.java  Descriptor.java  DualLock.java  Enc.java  Ex.java  Handler.java  HeapReadBuffer.java  HeapWriteBuffer.java  LifeCycle.java  LifecycleError.java  LogLevel.java  Logger.java  LoggerFacade.java  LoggerFactory.java  NetEvent.java  NetFacade.java  NetFactory.java  Os.java  ReadBuffer.java  SegmentReadBuffer.java  Socket.java  Transmittable.java  WriteBuffer.java
jing-common/src/test/java/: module-info.java
jing-common/src/test/java/io/jingproject/commontest/: DualLockTest.java  ExTest.java
jing-ffm/: pom.xml
jing-ffm-processor/: pom.xml
jing-ffm-processor/src/main/java/: module-info.java
jing-ffm-processor/src/main/java/io/jingproject/ffmprocessor/: FfmProcessor.java
jing-ffm/src/main/java/: module-info.java
jing-ffm/src/main/java/io/jingproject/ffm/: Downcall.java  FFM.java  ForeignException.java  LibDescriptor.java  NativeSegmentAccess.java  OsType.java  SharedLib.java  SharedLibs.java
jing-ffm/src/test/java/: module-info.java
jing-ffm/src/test/java/io/jingproject/ffmtest/: IndexBenchmark.java  IndexTest.java
jing-log/: pom.xml
jing-log/src/main/java/: module-info.java
jing-log/src/main/java/io/jingproject/log/: ConsoleLogEventHandler.java  LogBindings.java  LogEvent.java  LogEventHandler.java  LogLib.java  LoggerFacadeImpl.java  LoggerImpl.java
jing-maven-plugin/: pom.xml
jing-net/: pom.xml
jing-net/src/main/java/: module-info.java
jing-net/src/main/java/io/jingproject/net/: Mux.java  (+6 more)
jing-std/: pom.xml
jing-std/src/main/c/: CMakeLists.txt  CMakePresets.json
jing-std/src/main/c/src/: common.c  common.h  io.c  io.h  sys.c  sys.h
jing-std/src/main/java/: module-info.java
(+33 files in other folders)
